SUBDIRS = . src

MAINTAINERCLEANFILES = aclocal.m4 \
		       configure \
		       Makefile.in \
		       config/config.guess \
		       config/ltmain.sh \
		       config/config.sub \
		       config/depcomp \
		       config.h.in \
		       stamp-h.in \
		       *~
EXTRA_DIST = autogen.sh

AUTOMAKE_OPTIONS = foreign dist-bzip2 no-dist-gzip
