bin_PROGRAMS = annodir

annodir_SOURCES = \
		  exceptions.hh \
		  action_handler.hh \
		  action_list_handler.hh action_list_handler.cc \
		  action_add_handler.hh action_add_handler.cc \
		  options.hh options.cc \
		  anno_db.hh anno_db.cc \
		  anno_db_entry.hh anno_db_entry.cc \
		  anno_db_note_entry.hh anno_db_note_entry.cc \
		  annodir.cc

AM_CFLAGS = -Wall
MAINTAINERCLEANFILES = Makefile.in *~
