bin_PROGRAMS = annodir

annodir_SOURCES = \
		  exceptions.hh \
		  action_handler.hh \
		  rcfile.hh rcfile.cc \
		  input.hh input.cc \
		  action_list_handler.hh action_list_handler.cc \
		  action_add_handler.hh action_add_handler.cc \
		  options.hh options.cc \
		  database.hh database.cc \
		  database_entry.hh database_entry.cc \
		  database_note_entry.hh database_note_entry.cc \
		  annodir.cc

LIBS = @READLINE_LIBS@

AM_CFLAGS = -Wall
MAINTAINERCLEANFILES = Makefile.in *~
