# $Id$

noinst_LTLIBRARIES = libutil.la
libutil_la_SOURCES = exceptions.hh \
		     string.hh string.cc \
		     misc.hh misc.cc \
		     regex.hh regex.cc \
		     file.hh file.cc \
		     vars.hh vars.cc \
		     cache.hh

AM_CXXFLAGS = -pedantic -ansi -Wall

MAINTAINERCLEANFILES = Makefile.in *.loT *~
